# dotfiles

./: .Xresources  .bash_profile  .bashrc  .buildinfo  .gitconfig  .gitignore  .remarkrc  .tmux.conf  .vimrc  .xonshrc  README.md  Taskfile.yml  Xresources.wsl  aqua.yaml  build.zig  build_python.py  build_python310.py  c.zig  curses.html  deploy.py  deploy.sh  dodo.py  doit.html  dot_sync.cmd  dot_sync.lua  dotfiles.html  dotfilesLink.sh  dotpack.toml  dotpack.yml  font.html  genindex.html  gyro.patch  handle.lua  home.html  index.html  init.ps1  install_go.sh  linux_tasks.py  local.md  meson.build  (+24 more)
.config/fish/: config.fish
.config/nvim/: dein.toml  init.vim
.config/vim/: dein.toml
.doctrees/: curses.doctree  doit.doctree  dotfiles.doctree  environment.pickle  font.doctree  index.doctree  prompt-toolkit.doctree  pygments.doctree  wt.doctree  xonsh.doctree
.doctrees/font/: index.doctree
.doctrees/obsidian/: .NET6.doctree  A-Frame.doctree  AGP.doctree  AndroidSdk.doctree  Angle.doctree  ArmWindows.doctree  AssetBrowser.doctree  Avatar.doctree  AzureKinect.doctree  BMesh.doctree  BarycentricCoordinates.doctree  BlenderTree.doctree  CORS.doctree  ChickenScheme.doctree  Chrome.doctree  CommonLisp.doctree  ComputationExpression.doctree  ConsoleHost.doctree  ContentLayer.doctree  ContentProxy.doctree  DOM.doctree  DRCS.doctree  DWM.doctree  DefoldEngine.doctree  DirectComposition.doctree  DirectXMath.doctree  Docusaurus.doctree  Download.doctree  ECS.doctree  ES6Proxy.doctree  Electron.doctree  Emacs.doctree  EmbededLanguage.doctree  Embree.doctree  FTXUI.doctree  FantasyConsole.doctree  FetchAPI.doctree  FileDescriptor.doctree  FileSystemAPI.doctree  FlatShading.doctree  (+648 more)
.doctrees/prompt-toolkit/: examples.doctree  index.doctree  pyvim.doctree
.github/workflows/: sphinx.yml
_sources/: curses.md.txt  doit.md.txt  dotfiles.md.txt  font.md.txt  index.md.txt
_sources/font/: index.md.txt
_sources/obsidian/: AGP.md.txt  AssetBrowser.md.txt  Avatar.md.txt  Chrome.md.txt  ContentLayer.md.txt  DefoldEngine.md.txt  Docusaurus.md.txt  ECS.md.txt  Emacs.md.txt  FTXUI.md.txt  FullBodyIK.md.txt  GObject.md.txt  GeneralizedInverse.md.txt  Gir.Core.md.txt  Gtk4_widget.md.txt  Haskell.md.txt  HtmlCanvasElement.md.txt  KMS.DRM_IOCTL_MODE_CREATE_DUMB failed. Permission denied.md.txt  Lighting.md.txt  Linux_boot.md.txt  Lit.md.txt  Marshal.md.txt  MeshSync.md.txt  ModuleBundler.md.txt  Mypaint.md.txt  NULL.md.txt  OpenGL_instancing.md.txt  OpenGL_loader.md.txt  OpenGL_pbr.md.txt  OpenHMD.md.txt  OpenLayers.md.txt  POI.md.txt  PackageManager.md.txt  Painttool.md.txt  PeerJS.md.txt  ProgramingFont.md.txt  Proxomitron.md.txt  RDP.md.txt  Rasterizer.md.txt  RemoteDesktop.md.txt  (+171 more)
_sources/prompt-toolkit/: examples.md.txt  index.md.txt  pyvim.md.txt
asset_viewer/: __main__.py  dirlist.py  inspector.py
cgi-bin/: query.py
config/fontconfig/: fonts.conf
config/nvim/: dein.toml  init.vim
config/openbox/: autostart  menu.xml
denosh/: deno.json  main.ts
docker/neovim/: Dockerfile
docs/: conf.py  doit.md  dotfiles.md  index.md  prompt-toolkit.md  pygments.md  shell.md  wt.md  xonsh.md  years.json
docs/obsidian/: .gitignore  .marksman.toml  A-Frame.md  AGP.md  Angle.md  Avatar.md  AzureKinect.md  ChickenScheme.md  ConsoleHost.md  DRCS.md  DWM.md  DirectWrite.md  DirectXMath.md  Download.md  Electron.md  EmbededLanguage.md  Embree.md  FlatShading.md  FoveatedRendering.md  (+234 more)
doit_lib/: __init__.py
dot/: __main__.py
electron-vite-project/: package-lock.json  package.json  smaster.index  tsconfig.json
font/: index.html
gltf-samples/: .gitignore  make-list.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
go/: go.mod  go.sum
home/: README.md  home.css  home.html  index.html  package-lock.json  package.json  prerender.js  search.html  tsconfig.json  vite.config.ts
lfs/: env.sh  go.mod  go.sum  lfs.toml  main.go
monkey/: main.go
msys2/lua_build/: .gitignore  call_hello.lua  hello.cpp  meson.build  meson_options.txt
msys2/lua_build/subprojects/: lpeg.wrap  lua.wrap
msys2/lua_build/subprojects/packagefiles/: luaconf.patch
msys2/lua_build/subprojects/packagefiles/lpeg/: meson.build
msys2/lua_build/subprojects/packagefiles/lua/: meson.build
msys2/tmux_build/subprojects/packagefiles/tmux/: meson.build
nu_plugin/: nu_plugin_sample.py
nvimruntime/: ddc.ts
obsidian/: .NET6.html  A-Frame.html  AGP.html  AndroidSdk.html  Angle.html  ArmWindows.html  AssetBrowser.html  Avatar.html  AzureKinect.html  BMesh.html  BarycentricCoordinates.html  BlenderTree.html  CORS.html  ChickenScheme.html  Chrome.html  CommonLisp.html  ComputationExpression.html  ConsoleHost.html  ContentLayer.html  ContentProxy.html  DOM.html  DRCS.html  DWM.html  DefoldEngine.html  DirectComposition.html  DirectXMath.html  Docusaurus.html  Download.html  ECS.html  ES6Proxy.html  Electron.html  Emacs.html  EmbededLanguage.html  Embree.html  FTXUI.html  FantasyConsole.html  FetchAPI.html  FileDescriptor.html  FileSystemAPI.html  FlatShading.html  (+648 more)
prompt-toolkit/: examples.html  index.html  pyvim.html
psmodule/: Library.fs  MyPSModule.fsproj  README.md  packageinfo.ps1
samples/: ansi-art-and-textarea.py  buttons.py  colorcolumn.py  float-transparency.py  focus.py  hello.py  pager.py  pygments_style.py  simple-example.py  sixel_window.py  splitter.py  style_selector.py  text-editor.py
scripts/: filer.py  py3m.py
src/: App.tsx  README.md  bpy_run.py  hello.stories.tsx  lua.c  main.zig  meson.build  w3m.patch
src/kilo/: build.zig  build.zig.zon  ipty.h  ipty_posix.cpp  ipty_win32.cpp  key_action.h  kilo.cpp  kilo.h  kilo_highlight.cpp  kilo_highlight.h  main.c  main.cpp  meson.build  term_posix.cpp  zig_cc.ini
src/kilo/src/: main.zig
src/singleplexer/: child_process.cpp  child_process.h  main.cpp  meson.build  utf8.h  vt_component.cpp  vt_component.h
subprojects/: libvterm.wrap
subprojects/packagefiles/libvterm/: meson.build
sync/: .Xresources  .vimrc
xr/: README.md  ezobj.js  index.html  index.js
xsh/: .gitignore  main.cpp  meson.build  posix_launch.cpp
(+10635 files in other folders)
