[build-system]
requires = [
    "setuptools >= 67",
    "setuptools_scm[toml] >= 7.1.0",
    #
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dot/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "dot"
description = "Dotfiles maintainer"
keywords = []
license = { text = "BSD 3-Clause License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    #
]
requires-python = ">=3.10"
dependencies = ["toml", "colorama", "colorlog"]
dynamic = ["version"]

[project.scripts]
dot = "dot.__main__:main"

[tool.readmd]
file = "README.md"
