project(
    'tmux',
    'c',
    version: '3.3a',
)

# flex = find_program('flex', required: false)
# bison = find_program('bison', required: false)
# if not flex.found()
#   error('MESON_SKIP_TEST flex not found.')
# endif
# if not bison.found()
#   error('MESON_SKIP_TEST bison not found.')
# endif
# lgen = generator(flex,
# output : '@PLAINNAME@.yy.c',
# arguments : ['-o', '@OUTPUT@', '@INPUT@'])
# lfiles = lgen.process('lexer.l')
# pgen = generator(bison,
# output : ['@BASENAME@.tab.c', '@BASENAME@.tab.h'],
# arguments : ['@INPUT@', '--defines=@OUTPUT1@', '--output=@OUTPUT0@'])
# pfiles = pgen.process('parser.y')

libevent_dep = dependency('libevent')
ncurses_dep = dependency('ncursesw')
libutf8proc_dep = dependency('libutf8proc')
tmux_inc = include_directories('.')
tmux_deps = [
    libevent_dep,
    ncurses_dep,
    libutf8proc_dep,
]
tmux_args = [
    '-DNCURSES_WIDECHAR',
    '-DTMUX_VERSION="3.3a"',
    '-DTMUX_CONF="/etc/tmux.conf:~/.tmux.conf:~/.config/tmux/tmux.conf"',
    '-DTMUX_TERM="tmux-256color"',
    '-DPACKAGE_NAME="tmux"',
    '-DPACKAGE_TARNAME="tmux"',
    '-DPACKAGE_VERSION="3.3a"',
    '-DPACKAGE_STRING="tmux 3.3a"',
    '-DPACKAGE_BUGREPORT=""',
    '-DPACKAGE_URL=""',
    '-DPACKAGE="tmux"',
    '-DVERSION="3.3a"',
    '-DSTDC_HEADERS=1',
    '-DHAVE_SYS_TYPES_H=1',
    '-DHAVE_SYS_STAT_H=1',
    '-DHAVE_STDLIB_H=1',
    '-DHAVE_STRING_H=1',
    '-DHAVE_MEMORY_H=1',
    '-DHAVE_STRINGS_H=1',
    '-DHAVE_INTTYPES_H=1',
    '-DHAVE_STDINT_H=1',
    '-DHAVE_UNISTD_H=1',
    '-D__EXTENSIONS__=1',
    '-D_ALL_SOURCE=1',
    '-D_GNU_SOURCE=1',
    '-D_POSIX_PTHREAD_SEMANTICS=1',
    '-D_TANDEM_SOURCE=1',
    '-DHAVE_DIRENT_H=1',
    '-DHAVE_FCNTL_H=1',
    '-DHAVE_INTTYPES_H=1',
    '-DHAVE_PATHS_H=1',
    '-DHAVE_PTY_H=1',
    '-DHAVE_STDINT_H=1',
    '-DHAVE_SYS_DIR_H=1',
    '-DHAVE_SYS_TREE_H=1',
    '-DHAVE_LIBM=1',
    '-DHAVE_DIRFD=1',
    '-DHAVE_FLOCK=1',
    '-DHAVE_SYSCONF=1',
    '-DHAVE_ASPRINTF=1',
    '-DHAVE_CFMAKERAW=1',
    '-DHAVE_CLOCK_GETTIME=1',
    '-DHAVE_EXPLICIT_BZERO=1',
    '-DHAVE_GETDTABLESIZE=1',
    '-DHAVE_GETPEEREID=1',
    '-DHAVE_GETLINE=1',
    '-DHAVE_GETPROGNAME=1',
    '-DHAVE_MEMMEM=1',
    '-DHAVE_SETENV=1',
    '-DHAVE_STRCASESTR=1',
    '-DHAVE_STRLCAT=1',
    '-DHAVE_STRLCPY=1',
    '-DHAVE_STRNDUP=1',
    '-DHAVE_STRSEP=1',
    '-DHAVE_EVENT2_EVENT_H=1',
    '-DHAVE_NCURSES_H=1',
    '-DHAVE_B64_NTOP=1',
    '-DHAVE_DAEMON=1',
    '-DHAVE_FORKPTY=1',
    '-DHAVE___PROGNAME=1',
    '-DHAVE_PROGRAM_INVOCATION_SHORT_NAME=1',
    '-DHAVE_SO_PEERCRED=1',
    '-DHAVE_PROC_PID=1',
    #
    '-DHAVE_UTF8PROC=1',
]

tmux_lib = static_library(
    'tmux',
    [
        'alerts.c',
        'arguments.c',
        'attributes.c',
        'cfg.c',
        'client.c',
        'cmd-attach-session.c',
        'cmd-bind-key.c',
        'cmd-break-pane.c',
        'cmd-capture-pane.c',
        'cmd-choose-tree.c',
        'cmd-command-prompt.c',
        'cmd-confirm-before.c',
        'cmd-copy-mode.c',
        'cmd-detach-client.c',
        'cmd-display-menu.c',
        'cmd-display-message.c',
        'cmd-display-panes.c',
        'cmd-find-window.c',
        'cmd-find.c',
        'cmd-if-shell.c',
        'cmd-join-pane.c',
        'cmd-kill-pane.c',
        'cmd-kill-server.c',
        'cmd-kill-session.c',
        'cmd-kill-window.c',
        'cmd-list-buffers.c',
        'cmd-list-clients.c',
        'cmd-list-keys.c',
        'cmd-list-panes.c',
        'cmd-list-sessions.c',
        'cmd-list-windows.c',
        'cmd-load-buffer.c',
        'cmd-lock-server.c',
        'cmd-move-window.c',
        'cmd-new-session.c',
        'cmd-new-window.c',
        # 'cmd-parse.y',
        # pfiles,
        'cmd-paste-buffer.c',
        'cmd-pipe-pane.c',
        'cmd-queue.c',
        'cmd-refresh-client.c',
        'cmd-rename-session.c',
        'cmd-rename-window.c',
        'cmd-resize-pane.c',
        'cmd-resize-window.c',
        'cmd-respawn-pane.c',
        'cmd-respawn-window.c',
        'cmd-rotate-window.c',
        'cmd-run-shell.c',
        'cmd-save-buffer.c',
        'cmd-select-layout.c',
        'cmd-select-pane.c',
        'cmd-select-window.c',
        'cmd-send-keys.c',
        'cmd-server-access.c',
        'cmd-set-buffer.c',
        'cmd-set-environment.c',
        'cmd-set-option.c',
        'cmd-show-environment.c',
        'cmd-show-messages.c',
        'cmd-show-options.c',
        'cmd-show-prompt-history.c',
        'cmd-source-file.c',
        'cmd-split-window.c',
        'cmd-swap-pane.c',
        'cmd-swap-window.c',
        'cmd-switch-client.c',
        'cmd-unbind-key.c',
        'cmd-wait-for.c',
        'cmd.c',
        'colour.c',
        'control-notify.c',
        'control.c',
        'environ.c',
        'file.c',
        'format.c',
        'format-draw.c',
        'grid-reader.c',
        'grid-view.c',
        'grid.c',
        'input-keys.c',
        'input.c',
        'job.c',
        'key-bindings.c',
        'key-string.c',
        'layout-custom.c',
        'layout-set.c',
        'layout.c',
        'log.c',
        'menu.c',
        'mode-tree.c',
        'names.c',
        'notify.c',
        'options-table.c',
        'options.c',
        'paste.c',
        'popup.c',
        'proc.c',
        'regsub.c',
        'resize.c',
        'screen-redraw.c',
        'screen-write.c',
        'screen.c',
        'server-acl.c',
        'server-client.c',
        'server-fn.c',
        'server.c',
        'session.c',
        'spawn.c',
        'status.c',
        'style.c',
        'tmux.c',
        'tty-acs.c',
        'tty-features.c',
        'tty-keys.c',
        'tty-term.c',
        'tty.c',
        'utf8.c',
        'window-buffer.c',
        'window-client.c',
        'window-clock.c',
        'window-copy.c',
        'window-customize.c',
        'window-tree.c',
        'window.c',
        'xmalloc.c',
        #
        'osdep-cygwin.c',
        'compat/asprintf.c',
        'compat/base64.c',
        'compat/cfmakeraw.c',
        # 'compat/clock_gettime.c',
        'compat/closefrom.c',
        # 'compat/daemon-darwin.c',
        'compat/daemon.c',
        'compat/err.c',
        'compat/explicit_bzero.c',
        'compat/fdforkpty.c',
        'compat/fgetln.c',
        'compat/freezero.c',
        'compat/getdtablecount.c',
        'compat/getdtablesize.c',
        # 'compat/getline.c',
        'compat/getopt.c',
        'compat/getpeereid.c',
        'compat/getprogname.c',
        'compat/imsg-buffer.c',
        'compat/imsg.c',
        'compat/memmem.c',
        'compat/reallocarray.c',
        'compat/recallocarray.c',
        # 'compat/setenv.c',
        'compat/setproctitle.c',
        'compat/strcasestr.c',
        'compat/strlcat.c',
        'compat/strlcpy.c',
        'compat/strndup.c',
        'compat/strnlen.c',
        'compat/strsep.c',
        'compat/strtonum.c',
        'compat/unvis.c',
        'compat/vis.c',
        # 'etc/compile',
        # 'etc/config.guess',
        # 'etc/config.sub',
        # 'etc/depcomp',
        # 'etc/install-sh',
        # 'etc/missing',
        # 'etc/ylwrap COPYING README 
        'cmd-parse.c',
        # 'etc/compile etc/config.guess etc/config.sub etc/depcomp',
        # 'etc/install-sh etc/missing etc/ylwrap',
        'fuzz/input-fuzzer.c',
        #
        'compat/utf8proc.c',
    ],
    implicit_include_directories: false,
    include_directories: tmux_inc,
    c_args: tmux_args,
)

tmux_dep = declare_dependency(
    include_directories: tmux_inc,
    link_with: tmux_lib,
    dependencies: tmux_deps,
    compile_args: [tmux_args],
)

executable(
    'tmux',
    'tmux.c',
    install: true,
    implicit_include_directories: false,
    dependencies: [tmux_dep],
)
